test/error/sema/enum-type-coercion.dsk
enum S
    A
    B
end

let x: S = 42

echo(x)
